Fixed footer positioning
Fixed footer positioning to stop from overlapping with page content

--- a/css/styles.css
+++ b/css/styles.css
@@ -86,9 +86,11 @@ button {
 footer {
     background-color: rgb(239, 173, 59);
     color: white;
-    padding: 1em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
     position: absolute;
-    bottom: 100;
     width: 100%;
 }
 
